Z-index fixed

--- a/css/slider.css
+++ b/css/slider.css
@@ -91,3 +91,8 @@
         padding: 20px 0;
   }
 }
+@media screen and (min-width: 1400px){
+    .card{
+        padding: 0 5px;
+  }
+}
